[SELC-5247] Added new API to retrieve userInstitution with list of product's user permission
